--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Bob's Bagels Web Shop | Bagles Galore!!! Sandwiches, Catering, We got it all!!!</title>
 </head>
 <body>
-  
+  <nav></nav>
 </body>
 </html>
