added unordered list to nav tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <title>Bob's Bagels Web Shop | Bagles Galore!!! Sandwiches, Catering, We got it all!!!</title>
 </head>
 <body>
-  <nav></nav>
+  <nav>
+    <ul>
+      <li></li>
+    </ul>
+  </nav>
 </body>
 </html>
