new lis in nav ul, comment

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
   <title>Bob's Bagels Web Shop | Bagles Galore!!! Sandwiches, Catering, We got it all!!!</title>
+  <!-- This is an html comment -->
 </head>
 <body>
   <nav>
     <ul>
-      <li></li>
+      <li>Home</li>
+      <li>Bob's Bio</li>
+      <li>Menu</li>
     </ul>
   </nav>
 </body>
