added stylesheet link to head of index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Bob's Bagels Web Shop | Bagles Galore!!! Sandwiches, Catering, We got it all!!!</title>
-  <!-- This is an html comment -->
+  <link rel="stylesheet" href="">
 </head>
 <body>
   <nav>
