--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     </ul>
   </nav>
   <footer>
-    
+
   </footer>
+
+
+
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="bower_components/underscore/underscore.js"></script>
+  <script src="bower_components/backbone/backbone.js"></script>
+  <script src="bower_components/handlebars/handlebars.js"></script>
+  <script src="js/app.js" type="text/javascript"></script>
+
 </body>
 </html>
