added meta tags to head of index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bob's Bagels Web Shop | Bagles Galore!!! Sandwiches, Catering, We got it all!!!</title>
   <link rel="stylesheet" href="">
 </head>
