--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bob's Bagels Web Shop | Bagles Galore!!! Sandwiches, Catering, We got it all!!!</title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
   <nav>
