--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li>Home</li>
-      <li>Bob's Bio</li>
-      <li>Menu</li>
-    </ul>
-  </nav>
+
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Bob's Bagels</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="">Menu</a></li>
+                <li><a href="">About Bob</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </div>
+    </div>
+  </div>
+
+
+
   <footer>
 
   </footer>
