padded CSS and added a test jumbotron

--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="">Menu</a></li>
-                <li><a href="">About Bob</a></li>
+                <li><a href="">| About Bob |</a></li>
                 <li><a href="">Login</a></li>
             </ul>
         </div>
     </div>
   </div>
+  <div class="body wire">
+  <div class="jumbotron"> TEST JUMBOTRON CSS</div>
 
-
-
+  </div>
   <footer>
 
   </footer>
