added full menu and side_bar for menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="row navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -30,12 +30,32 @@
         </div>
     </div>
   </div>
-  <div class="body wire">
-  <div class="jumbotron"> TEST JUMBOTRON CSS</div>
 
+  <div class="container-fluid">
+    <div class="body row wire">
+      <div class="jumbotron col-md-10 wire"> TEST JUMBOTRON CSS</div>
+      <div class=" sidebar-right pull-right col-md-2 side wire">Side Bar</div>
+
+
+        <div class="menu wire col-md-10">
+          <div class="full_menu col-md-10 wire">Full Menu</div>
+          <div class="submenu wire col-md-2">
+            <div class="wire"> Sandwiches</div>
+            <div class="wire"> Catering Menu</div>
+            <div class="wire"> Beverages</div>
+          </div>
+        </div>
+
+
+    </div>
   </div>
-  <footer>
 
+  <footer>
+    <div class="row container">
+      <div class="footer wire col-md-12">
+      FOOTER
+      </div>
+    </div>
   </footer>
 
 
