added footer CSS and the finished the first attempt at CSS wireframe on the main page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 
   <footer>
-    <div class="row container">
+    <div class="row container-fluid">
       <div class="footer wire col-md-12">
       FOOTER
       </div>
