fixed footer and made the wireframe match the mockup, added menu object for webapp JS and have a for loop put a placeholder for each menu item

--- a/index.html
+++ b/index.html
@@ -38,12 +38,17 @@
 
 
         <div class="menu wire col-md-10">
-          <div class="full_menu col-md-10 wire">Full Menu</div>
+
           <div class="submenu wire col-md-2">
             <div class="wire"> Sandwiches</div>
             <div class="wire"> Catering Menu</div>
             <div class="wire"> Beverages</div>
           </div>
+
+          <div class="Front_menu col-md-10 wire" id="Front_menu">
+            Full Menu
+          </div>
+
         </div>
 
 
