made the menu generate from catagories over products and added a click event for menu selections

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="">Menu</a></li>
-                <li><a href="">| About Bob |</a></li>
+                <li><a href="">About Bob</a></li>
                 <li><a href="">Login</a></li>
             </ul>
         </div>
@@ -33,20 +33,20 @@
 
   <div class="container-fluid">
     <div class="body row wire">
-      <div class="jumbotron col-md-10 wire"> TEST JUMBOTRON CSS</div>
+      <div class="jumbo col-md-10 wire"> TEST JUMBOTRON CSS</div>
       <div class=" sidebar-right pull-right col-md-2 side wire">Side Bar</div>
 
 
         <div class="menu wire col-md-10">
 
           <div class="submenu wire col-md-2">
-            <div class="wire"> Sandwiches</div>
-            <div class="wire"> Catering Menu</div>
-            <div class="wire"> Beverages</div>
+            <div class="selected wire" id="Sandwiches"> Sandwiches</div>
+            <div class="selected wire" id="Catering Menu"> Catering Menu</div>
+            <div class="selected wire" id="Beverages"> Beverages</div>
           </div>
 
           <div class="Front_menu col-md-10 wire" id="Front_menu">
-            Full Menu
+            <div id="selected_menu"></div>
           </div>
 
         </div>
