menu now pulls from API ONCE and cycles through selected items

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="menu wire col-md-10">
 
           <div class="submenu wire col-md-2">
-            <div class="selected wire" id="Sandwiches"> Sandwiches</div>
-            <div class="selected wire" id="Catering Menu"> Catering Menu</div>
-            <div class="selected wire" id="Beverages"> Beverages</div>
+            <div class="selected wire" id="1"> Sandwiches</div>
+            <div class="selected wire" id="0"> Catering Menu</div>
+            <div class="selected wire" id="2"> Beverages</div>
           </div>
 
           <div class="Front_menu col-md-10 wire" id="Front_menu">
