added styling for menu items images

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
     {{#each sandwiches.products}}
       <div class="sandwich">
         <h2>{{title}}</h2>
-        <img src="{{image_url}}">
+        <div class="menu_images">
+          <img src="{{image_url}}">
+        </div>
         <p>{{description}}</p>
         <h3>{{price}}</h3>
       </div>
