--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="">Menu</a></li>
+                <li><a href="#/sandwiches">Menu</a></li>
                 <li><a href="">About Bob</a></li>
                 <li><a href="">Login</a></li>
             </ul>
@@ -35,13 +35,13 @@
     <div class="body row wire">
       <div class="jumbo col-md-10 wire"> TEST JUMBOTRON CSS</div>
 
-      <div class=" sidebar-right pull-right col-md-2 side wire">Side Bar
+      <div class=" sidebar-right pull-right col-md-2 side">Side Bar
 
       </div>
 
         <div class="menu wire col-md-10">
 
-          <div class="submenu wire col-md-2">
+          <div class="submenu col-md-2">
             <div class="selected wire" id=""><a href="#/sandwiches">Sandwiches</a></div>
             <div class="selected wire" id=""><a href="#/catering">Catering Menu</a></div>
             <div class="selected wire" id="2"><a href="#/beverages">Beverages</a></div>
