added stylying for category buttons and add to cart buttons

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div class="menu col-md-10">
 
           <div class="submenu col-md-2">
-            <div class="selected wire" id=""><a href="#/sandwiches">Sandwiches</a></div>
-            <div class="selected wire" id=""><a href="#/catering">Catering Menu</a></div>
-            <div class="selected wire" id=""><a href="#/beverages">Beverages</a></div>
+            <div class="selected btn btn-danger category" id=""><a href="#/sandwiches">Sandwiches</a></div>
+            <div class="selected btn btn-danger category" id=""><a href="#/catering">Catering Menu</a></div>
+            <div class="selected btn btn-danger category" id=""><a href="#/beverages">Beverages</a></div>
           </div>
 
           <div class="Front_menu col-md-10" id="Front_menu">
