added basic cart styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     <div class="body row wire">
       <div class="jumbo col-md-10 wire"> TEST JUMBOTRON CSS</div>
 
-      <div class=" sidebar-right pull-right col-md-2 side">Side Bar
+      <div class=" sidebar-right pull-right col-md-2 side">
+
+        <div class="shopping-cart">
+          <h4>Your Cart</h4>
+        </div>
 
       </div>
 
@@ -74,7 +78,7 @@
   <script src="bower_components/handlebars/handlebars.js"></script>
   <script src="js/app.js" type="text/javascript"></script>
 
-
+<!-- menu categories templates -->
   <script type="text/x-handlebars-template" id="sandwichesTemplate">
     {{#each sandwiches.products}}
       <div class="menu_item">
@@ -123,6 +127,11 @@
     {{/each}}
   </script>
 
+  <!-- delivery template-->
+
+
+
+  <!-- cart template-->
 
 
 </body>
