added basic jumbotron styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Bob's Bagels Web Shop | Bagles Galore!!! Sandwiches, Catering, We got it all!!!</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
+  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -33,7 +34,9 @@
 
   <div class="container-fluid">
     <div class="body row wire">
-      <div class="jumbo col-md-10 wire"> TEST JUMBOTRON CSS</div>
+      <div class="jumbo col-md-10">
+        <h1>Bob's Bagels</h1>
+      </div>
 
       <div class=" sidebar-right pull-right col-md-2 side">
 
