--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Bob's Bagels</a>
+            <!-- <a class="navbar-brand" href="#">Bob's Bagels</a> -->
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
