--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="#/sandwiches">Menu</a></li>
-                <li><a href="">About Bob</a></li>
+                <li><a href="#/about">About Bob</a></li>
                 <li><a href="">Login</a></li>
             </ul>
         </div>
@@ -49,9 +49,9 @@
         <div class="menu col-md-10">
 
           <div class="submenu col-md-2">
-            <div class="selected btn btn-danger category" id=""><a href="#/sandwiches">Sandwiches</a></div>
-            <div class="selected btn btn-danger category" id=""><a href="#/catering">Catering Menu</a></div>
-            <div class="selected btn btn-danger category" id=""><a href="#/beverages">Beverages</a></div>
+            <div class="selected btn btn-warning category" id=""><a href="#/sandwiches">Sandwiches</a></div>
+            <div class="selected btn btn-warning category" id=""><a href="#/catering">Catering Menu</a></div>
+            <div class="selected btn btn-warning category" id=""><a href="#/beverages">Beverages</a></div>
           </div>
 
           <div class="Front_menu col-md-10" id="Front_menu">
@@ -136,6 +136,13 @@
 
   <!-- cart template-->
 
+
+  <!-- about template-->
+  <script type="text/x-handlebars-template" id="aboutTemplate">
+      <div class="menu_item">
+        <p>{{about}}</p>
+      </div>
+  </script>
 
 </body>
 </html>
