changed footer color to black. removed wire css class.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <div class="container-fluid">
-    <div class="body row wire">
+    <div class="body row">
       <div class="jumbo col-md-10">
         <h1>Bob's Bagels</h1>
       </div>
@@ -66,9 +66,7 @@
 
   <footer>
     <div class="row container-fluid">
-      <div class="footer wire col-md-12">
-      FOOTER
-      </div>
+      <div class="footer col-md-12"></div>
     </div>
   </footer>
 
