--- a/index.html
+++ b/index.html
@@ -77,9 +77,34 @@
   <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/backbone/backbone.js"></script>
   <script src="bower_components/handlebars/handlebars.js"></script>
+  <script src="js/lineItemSubmission.js"></script>
   <script src="js/app.js" type="text/javascript"></script>
 
-<!-- menu categories templates -->
+  <!-- Page root template -->
+  <script type="text/x-handlebars-template" id="menuTemplate">
+    {{#each menu}}
+      <div class="menu_item">
+        <div class="pull-left">
+          <img src="{{image_url}}">
+        </div>
+        <div class="group-auto-align">
+        <h2>{{title}}</h2>
+        <p>{{description}}</p>
+        <h3>{{price}}</h3>
+        </div>
+
+        <form class="lineitem_submit">
+          <input id="{{id}}" type="submit" name="Add to Cart" >
+          <input type="hidden" value="{{id}}" >
+          <input type="number">
+        </form>
+
+
+      </div>
+    {{/each}}
+  </script>
+
+  <!-- menu button & sandwiches button templates -->
   <script type="text/x-handlebars-template" id="sandwichesTemplate">
     {{#each sandwiches.products}}
       <div class="menu_item">
@@ -91,11 +116,12 @@
         <p>{{description}}</p>
         <h3>{{price}}</h3>
         </div>
-        <button class="btn btn-danger">Add to Cart</button>
+        <button id="{{id}}" class="btn btn-danger">Add to Cart</button>
       </div>
     {{/each}}
   </script>
 
+  <!-- catering button template -->
   <script type="text/x-handlebars-template" id="cateringTemplate">
     {{#each catering.products}}
       <div class="menu_item">
@@ -107,11 +133,12 @@
         <p>{{description}}</p>
         <h3>{{price}}</h3>
         </div>
-        <button class="btn btn-danger">Add to Cart</button>
+        <button id="{{id}}" class="btn btn-danger">Add to Cart</button>
       </div>
     {{/each}}
   </script>
 
+<!-- beverages button template -->
   <script type="text/x-handlebars-template" id="beveragesTemplate">
     {{#each beverages.products}}
       <div class="menu_item">
@@ -123,7 +150,7 @@
         <p>{{description}}</p>
         <h3>{{price}}</h3>
         </div>
-        <button class="btn btn-danger">Add to Cart</button>
+        <button id="{{id}}" class="btn btn-danger">Add to Cart</button>
       </div>
     {{/each}}
   </script>
