class on menu image

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <script type="text/x-handlebars-template" id="menuTemplate">
     {{#each menu.products}}
       <div class="menu_item">
-        <div class="pull-left">
+        <div class="menu-image pull-left">
           <img src="{{image_url}}">
         </div>
         <div class="group-auto-align">
