--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
   <script src="bower_components/backbone/backbone.js"></script>
   <script src="bower_components/handlebars/handlebars.js"></script>
   <script src="js/lineItemSubmission.js"></script>
+  <script src="js/cookies.js" ></script>
   <script src="js/orderSubmission.js"></script>
   <script src="js/app.js" type="text/javascript"></script>
 
