lineitem submission walkthrough for shaai

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <form class="lineitem_submit">
           <input id="{{id}}" type="submit" name="Add to Cart" >
           <input type="hidden" value="{{id}}" >
-          <input type="number">
+          <input type="number" value="1">
         </form>
       </div>
     {{/each}}
