updating line item submission

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <!-- <nav class="navbar navbar-fixed" role="navigation">
+  <nav class="navbar navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -24,14 +24,9 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#/sandwiches">Sandwiches</a></li>
-              <li><a href="#/catering">Catering</a></li>
-              <li><a href="#/beverages">Beverages</a></li>
-            </ul>
-          </li>
+          <li><a href="#Sandwiches-section">Sandwiches</a></li>
+          <li><a href="#Catering-section">Catering</a></li>
+          <li><a href="#Beverages-section">Beverages</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#/about">About Bob</a></li>
@@ -44,7 +39,7 @@
         </ul>
       </div>
     </div>
-  </nav> -->
+  </nav>
 
   <div class="container-fluid">
     <div class="row">
@@ -58,14 +53,14 @@
       </div>
       <div class="shopping-cart">
         <h1>Bob does bagels. <small>Buy them here.</small></h1>
-        <form id="clear-cart">
-          <input class="btn btn-default" type="submit" name="empty-cart" value="Empty Cart">
-          <a class="btn btn-default" href="#/checkout">Checkout</a>
-        </form>  
-        
         <div id="line-items">
           <!-- line items go here -->
         </div>
+        <form id="clear-cart">
+          <input class="btn btn-default" type="submit" name="empty-cart" value="Empty Cart">
+          <a class="btn btn-default" href="#/checkout">Checkout</a>
+          <!-- <a id="updateCart" class="btn btn-default" href="#">Update Cart</a> -->
+        </form>  
         
       </div>
     </div>
@@ -154,13 +149,13 @@
 
   <!-- line item template -->
   <script type="text/x-handlebars-template" id="lineItemTemplate">
-    <div class="line-item">
+    <div id="{{item.id}}-container" class="line-item">
       <h3>{{item.product.title}}</h3>
       <p>Quantity: <input type="number" value="{{item.quantity}}" class="line-item-quantity"></p>
       <p>{{item.product.description}}</p>
       <p>{{item.product.price}}</p>
-      <form id="update-line-item">
-
+      <form class="update-line-item">
+        <input class="btn btn-default" type="submit" id="{{item.id}}" value="Update Item" >
       </form>
     </div>
 
