--- a/index.html
+++ b/index.html
@@ -117,21 +117,22 @@
 
   <!-- menu page -->
   <script type="text/x-handlebars-template" id="mainTemplate">
-    {{#each menu}}
-      <section id="{{name}}-section" class="category-section">
-        <header id="{{name}}-header" class="category-header">
-          <h1>{{name}}</h1>
-        </header>
-        {{#each products}}
+    {{#each products}}
+      <section id="{{title}}-section" class="product-section">
         <div class="product row">
-         
           <img src="{{image_url}}" />
           <h2>{{title}}</h2>
           <p>
             <span class="description">{{description}}</span>
             <span class="product-price"> ${{price}}</span>
           </p>
-
+          <div class="options">
+            {{#each options}}
+            <label>
+              <input type="checkbox">{{items}}
+            </label>
+            {{/each}}
+          </div>
           <form class="lineitem_submit">
             <div class="form-group">
               <span class="quantity">Quantity: <input type="number" value="1"></span>  
@@ -142,7 +143,6 @@
             </div>
           </form>
         </div>
-        {{/each}}
       </section>
     {{/each}}
   </script>
